# money-tracker

./: .gitignore  README.md  app.py  pyproject.toml
files/: .gitkeep
results/: .gitkeep
tests/: test_app.py
utils/: file_processing.py  transaction_parsing.py
