[tool.poetry]
name = "money-tracker"
version = "0.1.0"
description = "money tracking app that ingests monthly statements and turns it into consumable data"
authors = ["Bryce Fongvongsa <BryceF24@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
pymupdf4llm = "^0.0.27"
pymupdf = "^1.26.3"
pandas = "^2.3.1"
pytest = "^8.4.1"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
